<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.petvaccine.app.view.VacinaAplicacaoActivity.VacinaAplicacaoFragment">

    <TextView android:id="@+id/vacina_aplicacao_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vacina_aplicacao_titulo"
        style="@style/AppTitleText" />

    <TextView android:id="@+id/vacina_aplicacao_text_numdose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vacina_aplicacao_numdose"
        style="@style/AppDisplayText" />

    <TextView android:id="@+id/vacina_aplicacao_text_data_previsao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vacina_aplicacao_data_previsao"
        style="@style/AppDisplayText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/vacina_aplicacao_text_se_aplicou"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/vacina_aplicacao_se_aplicou"
            style="@style/AppDisplayText" />

        <CheckBox
            android:id="@+id/vacina_aplicacao_check_se_aplicou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/vacina_aplicacao_layout_se_aplicou_true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/vacina_aplicacao_text_data"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/vacina_aplicacao_data_aplicacao"
                style="@style/AppDisplayText" />

            <EditText
                android:id="@+id/vacina_aplicacao_campo_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:inputType="date" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/vacina_aplicacao_text_laboratorio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/vacina_aplicacao_laboratorio"
                style="@style/AppDisplayText" />

            <EditText
                android:id="@+id/vacina_aplicacao_campo_laboratorio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/vacina_aplicacao_text_lote"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/vacina_aplicacao_lote"
                style="@style/AppDisplayText" />

            <EditText
                android:id="@+id/vacina_aplicacao_campo_lote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <Button
            android:id="@+id/vacina_aplicacao_botao_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/vacina_aplicacao_botao_ok"
            android:visibility="gone"
            style="@style/AppButton" />

    </LinearLayout>

</LinearLayout>
