<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.petvaccine.app.view.PetAdicionaActivity.AdicionaPetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="3dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/pet_detalhes_nome"
            style="@style/AppDisplayText" />
        <EditText
            android:id="@+id/adiciona_pet_nome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="3dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/pet_detalhes_raca"
            style="@style/AppDisplayText" />
        <Spinner
            android:id="@+id/adiciona_pet_raca"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/array_pet_racas"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="3dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/pet_detalhes_nascimento"
            style="@style/AppDisplayText" />
        <EditText
            android:id="@+id/adiciona_pet_nascimento"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="date" />
    </LinearLayout>

    <ImageView
        android:id="@+id/adiciona_pet_imagem"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:src="@mipmap/image_pet_no_photo" />

    <TextView
        android:id="@+id/adiciona_pet_text_alterar_imagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="italic"
        android:text="@string/pet_detalhes_alterar_imagem"/>

    <Button
        android:id="@+id/adiciona_pet_botao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/botao_adicionar"
        style="@style/AppButton" />

</LinearLayout>
