<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.petvaccine.app.view.PetDetalhesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="3dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/pet_detalhes_nome"
            style="@style/AppDisplayText" />
        <EditText
            android:id="@+id/pet_detalhes_nome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:editable="false"
            android:inputType="none" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="3dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/pet_detalhes_raca"
            android:gravity="center"
            style="@style/AppDisplayText" />
        <EditText
            android:id="@+id/pet_detalhes_raca"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:editable="false"
            android:inputType="none" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="3dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/pet_detalhes_nascimento"
            android:gravity="center"
            style="@style/AppDisplayText" />
        <EditText
            android:id="@+id/pet_detalhes_nascimento"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:editable="false"
            android:inputType="none" />
    </LinearLayout>

    <ImageView
        android:id="@+id/pet_detalhes_imagem"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:src="@mipmap/image_pet_no_photo" />

    <Button
        android:id="@+id/pet_detalhes_botao_vacinas_proximas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pet_detalhes_botao_vacinas_proximas"
        android:layout_gravity="center_horizontal"
        style="@style/AppButton" />

</LinearLayout>
